<resources>
    <string name="app_name">Minggu 3 (Layout)</string>
    <string name="_1">1</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="_2">2</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="_3">3</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="_4">4</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="_5">5</string>
    <string name="tabel_layout">Tabel Layout</string>
    <string name="_6">6</string>
    <string name="matrial_desaign">Matrial Desaign</string>
    <string name="_7">7</string>
    <string name="scroll_view">Scroll View</string>
    <string name="_8">8</string>
    <string name="scroll_view_horizontal">scroll View Horizontal</string>
    <string name="to">To</string>
    <string name="subject">Subjek</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="reminder">Reminder Name</string>
    <string name="done">Done</string>
    <string name="login">LOGIN</string>
</resources>