<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context="MainActivity"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/LinearLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg1"
                android:text="@string/_1"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:onClick="Button01"/>



            <TextView
                android:id="@+id/textLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/linear_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/RelativeLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg1"
                android:text="@string/_2"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:onClick="Button02"/>



            <TextView
                android:id="@+id/textRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/relative_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/ConstraintLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg1"
                android:text="@string/_3"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:onClick="Button03"/>


            <TextView
                android:id="@+id/textConstrainLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/constraint_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/FrameLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg1"
                android:text="@string/_4"
                android:textSize="40sp"
                android:layout_gravity="center"/>



            <TextView
                android:id="@+id/textFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/frame_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/TabelLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg1"
                android:text="@string/_5"
                android:textSize="40sp"
                android:layout_gravity="center"/>



            <TextView
                android:id="@+id/textTabelLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/tabel_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/MatrialDesaign"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg1"
                android:text="@string/_6"
                android:textSize="40sp"
                android:layout_gravity="center"/>



            <TextView
                android:id="@+id/textMatrialDesaign"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/matrial_desaign"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/scrollView"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg1"
                android:text="@string/_7"
                android:textSize="40sp"
                android:layout_gravity="center"/>



            <TextView
                android:id="@+id/textScrollView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/scroll_view"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/ScrollViewHorizontal"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg1"
                android:text="@string/_5"
                android:textSize="40sp"
                android:layout_gravity="center"/>



            <TextView
                android:id="@+id/textScrollViewHorizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/scroll_view_horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>


        </LinearLayout>

    </LinearLayout>



</LinearLayout>